FIX: MainForm now checks if it's being destroyed before updating itself FIX: Main now computes the absolute path of the skin and settings folder based on the application path NEW: Added VersionInformation.pas
git-svn-id: https://appetizer.googlecode.com/svn@55 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/Perso/MiniLaunchBar/Développement/Data/Locales/en.txt
+++ b/Perso/MiniLaunchBar/Développement/Data/Locales/en.txt
@@ -1,2 +1,6 @@
 Global.Error = Error
 MainForm.LaunchFileError = This file doesn't exist or has been deleted (Error %0%)
+IconPanel.PopupMenu.NewShortcut = New shortcut...
+IconPanel.PopupMenu.NewSeparator = New separator...
+IconPanel.PopupMenu.Delete = Delete...
+IconPanel.PopupMenu.Properties = Properties
