EditFolderItemUnit.pas: Implemented localization of controls IconPanel.pas: Implemented creation of new shorcuts and new separators Main.pas: Added ConfirmationMessage() method
git-svn-id: https://appetizer.googlecode.com/svn@59 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/Perso/MiniLaunchBar/Développement/Data/Locales/en.txt
+++ b/Perso/MiniLaunchBar/Développement/Data/Locales/en.txt
@@ -4,3 +4,7 @@ IconPanel.PopupMenu.NewShortcut = New shortcut...
 IconPanel.PopupMenu.NewSeparator = New separator...
 IconPanel.PopupMenu.Delete = Delete...
 IconPanel.PopupMenu.Properties = Properties
+IconPanel.DeleteConfirmation = Do you wish to delete this item?
+EditFolderItemForm.Title = Shorcut Properties
+EditFolderItemForm.NameLabel = Name:
+EditFolderItemForm.LocationLabel = Location:
