- NEW: Implemented support for variables - NEW: LogToFile() - NEW: Implemented tray icon
git-svn-id: https://appetizer.googlecode.com/svn@62 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/Perso/MiniLaunchBar/Développement/Data/Locales/en.txt
+++ b/Perso/MiniLaunchBar/Développement/Data/Locales/en.txt
@@ -5,6 +5,7 @@ Global.Yes = Yes
 Global.No = No
 Global.Save = Save
 Global.OpenDialog.AllFiles = All files
+Global.Close = Close
 
 FolderItem.LaunchFileError = This file doesn't exist or has been deleted (Error %0%)
 
