NEW: Minimize button NEW: Hide / Show option in tray icon menu
git-svn-id: https://appetizer.googlecode.com/svn@78 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Data/Locales/en.txt
+++ b/trunk/Data/Locales/en.txt
@@ -1,3 +1,7 @@
+$Metadata.Language = English
+$Metadata.Author = Laurent Cozic
+$Metadata.Email = laurent@cozic.net
+
 Global.Error = Error
 Global.Cancel = Cancel
 Global.OK = OK
@@ -5,10 +9,8 @@ Global.Yes = Yes
 Global.No = No
 Global.Save = Save
 Global.OpenDialog.AllFiles = All files
-Global.Close = Close
 
 FolderItem.LaunchFileError = This file doesn't exist or has been deleted (Error %0%)
-
 
 IconPanel.PopupMenu.NewShortcut = New shortcut...
 IconPanel.PopupMenu.NewSeparator = New separator...
@@ -21,3 +23,6 @@ IconPanel.NewShorcut.OpenDialog = Select a file or a folder
 EditFolderItemForm.Title = Shorcut Properties
 EditFolderItemForm.NameLabel = Name:
 EditFolderItemForm.LocationLabel = Location:
+
+TrayIcon.Close = Close
+TrayIcon.HideShow = Hide / Show
