- Removed variables that are declared but no longer used - Fixed tooltip background - "Edit folder item" can be validated by pressing Enter - Made new dialog box that allows selecting a file OR a folder - When the form is resized, the option panel will now update its width depending on the layout of its content.
git-svn-id: https://appetizer.googlecode.com/svn@82 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Data/Locales/en.txt
+++ b/trunk/Data/Locales/en.txt
@@ -25,4 +25,9 @@ EditFolderItemForm.NameLabel = Name:
 EditFolderItemForm.LocationLabel = Location:
 
 TrayIcon.Close = Close
-TrayIcon.HideShow = Hide / Show
+TrayIcon.Hide = Hide
+TrayIcon.Show = Show
+
+SelectFolderOrFileDialog.Title = Select folder or file
+SelectFolderOrFileDialog.SelectFile = Select file
+SelectFolderOrFileDialog.SelectFolder = Select folder
