--- a/trunk/Data/Locales/en.txt
+++ b/trunk/Data/Locales/en.txt
@@ -1,6 +1,6 @@
-$Metadata.Language = English
-$Metadata.Author = Laurent Cozic
-$Metadata.Email = laurent@cozic.net
+// English
+// @author = Laurent Cozic
+// @email.rot13 = ynherag@pbmvp.arg
 
 Global.Error = Error
 Global.Cancel = Cancel
@@ -13,12 +13,10 @@ Global.OpenDialog.AllFiles = All files
 FolderItem.LaunchFileError = This file doesn't exist or has been deleted (Error %0%)
 
 IconPanel.PopupMenu.NewShortcut = New shortcut...
-IconPanel.PopupMenu.NewSeparator = New separator...
 IconPanel.PopupMenu.Delete = Delete...
 IconPanel.PopupMenu.Properties = Properties
-IconPanel.PopupMenu.AddToQuickLaunch = Add to Quick Launch group
+IconPanel.PopupMenu.AddToQuickLaunch = Add to Multi Launch group
 IconPanel.DeleteConfirmation = Do you wish to delete this item?
-IconPanel.NewShorcut.OpenDialog = Select a file or a folder
 
 EditFolderItemForm.Title = Shorcut Properties
 EditFolderItemForm.NameLabel = Name:
@@ -31,3 +29,11 @@ TrayIcon.Show = Show
 SelectFolderOrFileDialog.Title = Select folder or file
 SelectFolderOrFileDialog.SelectFile = Select file
 SelectFolderOrFileDialog.SelectFolder = Select folder
+
+Icon.Size16 = Small
+Icon.Size32 = Large
+
+ConfigDialog.Title = Configuration
+ConfigDialog.GeneralTab = General
+ConfigDialog.LanguageLabel = Language:
+ConfigDialog.IconSizeLabel = Icon size:
