--- a/trunk/Data/Locales/fr.txt
+++ b/trunk/Data/Locales/fr.txt
@@ -1,1 +1,39 @@
+// Français
+// @author = Laurent Cozic
+// @email.rot13 = ynherag@pbmvp.arg
+
 Global.Error = Erreur
+Global.Cancel = Annuler
+Global.OK = OK
+Global.Yes = Oui
+Global.No = Non
+Global.Save = Sauvegarder
+Global.OpenDialog.AllFiles = Tous les fichiers
+
+FolderItem.LaunchFileError = Ce fichier n'existe pas ou a été effacé (Erreur %0%)
+
+IconPanel.PopupMenu.NewShortcut = Nouveau raccourci...
+IconPanel.PopupMenu.Delete = Supprimer...
+IconPanel.PopupMenu.Properties = Propriétés
+IconPanel.PopupMenu.AddToQuickLaunch = Ajouter au groupe de Lancements Multiples
+IconPanel.DeleteConfirmation = Souhaitez-vous supprimer cet objet ?
+
+EditFolderItemForm.Title = Propriétés du raccourci
+EditFolderItemForm.NameLabel = Nom :
+EditFolderItemForm.LocationLabel = Emplacement :
+
+TrayIcon.Close = Fermer
+TrayIcon.Hide = Masquer
+TrayIcon.Show = Montrer
+
+SelectFolderOrFileDialog.Title = Sélectionnez un fichier ou un dossier
+SelectFolderOrFileDialog.SelectFile = Sélectionner fichier
+SelectFolderOrFileDialog.SelectFolder = Sélectionner dossier
+
+Icon.Size16 = Petite
+Icon.Size32 = Grande
+
+ConfigDialog.Title = Configuration
+ConfigDialog.GeneralTab = Général
+ConfigDialog.LanguageLabel = Langue :
+ConfigDialog.IconSizeLabel = Taille des icônes :
