- Started config dialog: implemented support for icon size and language properties - Converted all locale files to UTF-8 (No BOM). Note that wxWidgets doesn't handle UTF files with BOM properly since it doesn't skip the first three bytes at the beginning of the file. - Added tooltips to option buttons and icons. Using wxWidgets built-in tooltips for now. - Fixed a bug in Localization class which was preventing it from defaulting to english when a string couldn't be find. - Added Localize() functions to all the objects that support localization
git-svn-id: https://appetizer.googlecode.com/svn@136 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Data/Locales/en.txt
+++ b/trunk/Data/Locales/en.txt
@@ -21,6 +21,7 @@ IconPanel.DeleteConfirmation = Do you wish to delete this item?
 EditFolderItemForm.Title = Shorcut Properties
 EditFolderItemForm.NameLabel = Name:
 EditFolderItemForm.LocationLabel = Location:
+EditFolderItemForm.LocationWarning = The shorcut location doesn't exist. Do you wish to continue?
 
 TrayIcon.Close = Close
 TrayIcon.Hide = Hide
@@ -37,3 +38,12 @@ ConfigDialog.Title = Configuration
 ConfigDialog.GeneralTab = General
 ConfigDialog.LanguageLabel = Language:
 ConfigDialog.IconSizeLabel = Icon size:
+
+OptionPanel.CloseToolTip = Close
+OptionPanel.MinimizeToolTip = Minimize
+OptionPanel.ConfigToolTip = Config
+OptionPanel.EjectToolTip = Eject
+OptionPanel.AddShortcutToolTip = New shortcut
+OptionPanel.HelpToolTip = Help
+OptionPanel.KeyToolTip = Encrypt / Decrypt
+OptionPanel.MultiLaunchToolTip = Multi-launch
