--- a/trunk/Data/Locales/de.txt
+++ b/trunk/Data/Locales/de.txt
@@ -9,30 +9,30 @@ Global.No = Nein
 Global.Save = Speichern
 Global.OpenDialog.AllFiles = Alle Dateien
 
-FolderItem.LaunchFileError = Diese Datei existiert nicht oder wurde gelöscht (Fehler %0%)
+FolderItem.LaunchFileError = Diese Datei existiert nicht oder wurde gelÃ¶scht (Fehler %0%)
 
-IconPanel.PopupMenu.NewShortcut = Neue Verknüpfung...
-IconPanel.PopupMenu.Delete = Löschen...
+IconPanel.PopupMenu.NewShortcut = Neue VerknÃ¼pfung...
+IconPanel.PopupMenu.Delete = LÃ¶schen...
 IconPanel.PopupMenu.Properties = Eigenschaften
-IconPanel.PopupMenu.AddToQuickLaunch = Zur Schnellstart-Gruppe hinzufügen
-IconPanel.DeleteConfirmation = Wollen Sie diese Verknüpfung wirklich löschen?
+IconPanel.PopupMenu.AddToQuickLaunch = Zur Schnellstart-Gruppe hinzufÃ¼gen
+IconPanel.DeleteConfirmation = Wollen Sie diese VerknÃ¼pfung wirklich lÃ¶schen?
 
-EditFolderItemForm.Title = Verknüpfungseigenschaften
+EditFolderItemForm.Title = VerknÃ¼pfungseigenschaften
 EditFolderItemForm.NameLabel = Name:
 EditFolderItemForm.LocationLabel = Ort:
 
-TrayIcon.Close = Schließen
+TrayIcon.Close = SchlieÃŸen
 TrayIcon.Hide = Minimieren
 TrayIcon.Show = Zeigen
 
-SelectFolderOrFileDialog.Title = Ordner oder Datei auswählen
-SelectFolderOrFileDialog.SelectFile = Datei auswählen
-SelectFolderOrFileDialog.SelectFolder = Ordner auswählen
+SelectFolderOrFileDialog.Title = Ordner oder Datei auswÃ¤hlen
+SelectFolderOrFileDialog.SelectFile = Datei auswÃ¤hlen
+SelectFolderOrFileDialog.SelectFolder = Ordner auswÃ¤hlen
 
 Icon.Size16 = Klein (16x16)
-Icon.Size32 = Groß  (32x32)
+Icon.Size32 = GroÃŸ  (32x32)
 
 ConfigDialog.Title = Einstellungen
 ConfigDialog.GeneralTab = Allgemein
 ConfigDialog.LanguageLabel = Sprache:
-ConfigDialog.IconSizeLabel = Größe der Symbole:
+ConfigDialog.IconSizeLabel = GrÃ¶ÃŸe der Symbole:
