--- a/trunk/Data/Locales/pl.txt
+++ b/trunk/Data/Locales/pl.txt
@@ -1,8 +1,8 @@
 // Polski
-// @author = Michal Trzebiatowski
+// @author = Michał Trzebiatowski
 // @email.rot13 = uvccvr_1968@ubgznvy.pbz
 
-Global.Error = Blad
+Global.Error = Błąd
 Global.Cancel = Anuluj
 Global.OK = OK
 Global.Yes = Tak
@@ -10,18 +10,18 @@ Global.No = Nie
 Global.Save = Zapisz
 Global.OpenDialog.AllFiles = Wszystkie pliki
 
-FolderItem.LaunchFileError = Nie mozna znalezc pliku lub zostal on usuniety (Blad %0%)
+FolderItem.LaunchFileError = Nie można znaleźć pliku lub został on usunięty (błąd %0%)
 
 IconPanel.PopupMenu.NewShortcut = Nowy skrót...
-IconPanel.PopupMenu.Delete = Usun...
-IconPanel.PopupMenu.Properties = Wlasciwosci
+IconPanel.PopupMenu.Delete = Usuń...
+IconPanel.PopupMenu.Properties = Właściwości
 IconPanel.PopupMenu.AddToQuickLaunch = Dodaj do grupy wielokrotnego uruchamiania
-IconPanel.DeleteConfirmation = Czy chcesz to usunac?
-IconPanel.NewShorcut.OpenDialog = Wybierz plik lub folder
+IconPanel.DeleteConfirmation = Czy chcesz to usunąć?
 
-EditFolderItemForm.Title = Wlasciwosci skrótu
+EditFolderItemForm.Title = Właściwości skrótu
 EditFolderItemForm.NameLabel = Nazwa:
-EditFolderItemForm.LocationLabel = Sciezka:
+EditFolderItemForm.LocationLabel = Ścieżka:
+EditFolderItemForm.LocationWarning = Cel skrótu nie istnieje. Czy chcesz kontynuować?
 
 TrayIcon.Close = Zamknij
 TrayIcon.Hide = Ukryj
@@ -31,10 +31,19 @@ SelectFolderOrFileDialog.Title = Wybierz folder lub plik
 SelectFolderOrFileDialog.SelectFile = Wybierz folder
 SelectFolderOrFileDialog.SelectFolder = Wybierz plik
 
-Icon.Size16 = Male
-Icon.Size32 = Duze
+Icon.Size16 = Małe
+Icon.Size32 = Duże
 
 ConfigDialog.Title = Konfiguracja
 ConfigDialog.GeneralTab = Ogólne
-ConfigDialog.LanguageLabel = Jezyk:
+ConfigDialog.LanguageLabel = Język:
 ConfigDialog.IconSizeLabel = Rozmiar ikon:
+
+OptionPanel.CloseToolTip = Zamknij
+OptionPanel.MinimizeToolTip = Minimalizuj
+OptionPanel.ConfigToolTip = Konfiguruj
+OptionPanel.EjectToolTip = Wysuń
+OptionPanel.AddShortcutToolTip = Nowy skrót
+OptionPanel.HelpToolTip = Pomoc
+OptionPanel.KeyToolTip = Zaszyfruj / Rozszyfruj
+OptionPanel.MultiLaunchToolTip = Multi-startowanie
