- Added Controller::GetVersionString to get the version number of the application - Done About dialog - Added license text to all the source files - Localization class: if the locale is english and no string can be found for a given ID, the ID is returned instead of an empty string - Help button now pops up a menu with two options: "Help" and "About"
git-svn-id: https://appetizer.googlecode.com/svn@145 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Data/Locales/en.txt
+++ b/trunk/Data/Locales/en.txt
@@ -10,6 +10,9 @@ Global.No = No
 Global.Save = Save
 Global.OpenDialog.AllFiles = All files
 
+OptionPanel.Help = Help Topics
+OptionPanel.About = About %0%...
+
 FolderItem.LaunchFileError = This file doesn't exist or has been deleted (Error %0%)
 
 IconPanel.PopupMenu.NewShortcut = New shortcut...
@@ -33,6 +36,10 @@ SelectFolderOrFileDialog.SelectFolder = Select folder
 
 Icon.Size16 = Small
 Icon.Size32 = Large
+
+AboutDialog.Title = About %0%...
+AboutDialog.AboutTab = About
+AboutDialog.License = License
 
 ConfigDialog.Title = Configuration
 ConfigDialog.GeneralTab = General
