- The dock orientation can now be set to vertical or horizontal
git-svn-id: https://appetizer.googlecode.com/svn@152 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Data/Locales/en.txt
+++ b/trunk/Data/Locales/en.txt
@@ -45,6 +45,9 @@ ConfigDialog.Title = Configuration
 ConfigDialog.GeneralTab = General
 ConfigDialog.LanguageLabel = Language:
 ConfigDialog.IconSizeLabel = Icon size:
+ConfigDialog.Orientation = Orientation
+ConfigDialog.HorizontalOrientation = Horizontal
+ConfigDialog.VerticalOrientation = Vertical
 
 OptionPanel.CloseToolTip = Close
 OptionPanel.MinimizeToolTip = Minimize
