- FolderItem, FolderItemRenderer and IconPanel classes: added support for sub-folder items - Added support for multiple skins - Created IconPanelFrame which might be used to create sub-menus - Bar is now rotated to the left rather than to the right in vertical mode - Added close and help buttons to the side of the dock
git-svn-id: https://appetizer.googlecode.com/svn@155 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Data/Locales/en.txt
+++ b/trunk/Data/Locales/en.txt
@@ -15,8 +15,8 @@ MessageBox.Info = Information
 MessageBox.Warning = Warning
 MessageBox.Confirmation = Confirmation
 
-OptionPanel.Help = Help Topics
-OptionPanel.About = About %0%...
+HelpPopup.Help = Help Topics
+HelpPopup.About = About %0%...
 
 FolderItem.LaunchFileError = This file doesn't exist or has been deleted (Error %0%)
 
