- Option panel is now automatically opened the first time the dock is launched - Removed help button from side of dock and replaced by eject button - Moved help button back to option panel - By default, the app now saves its settings in the "Data/Settings" folder. - Added -d parameters to set data folder path, and -u to automatically use the user data folder (c:\documents and settings...) - #ifdefed all Windows-specific code so that the project can be built in Linux - Created Utilities class
git-svn-id: https://appetizer.googlecode.com/svn@162 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Data/Locales/en.txt
+++ b/trunk/Data/Locales/en.txt
@@ -35,10 +35,10 @@ HelpPopup.About = About %0%...
 FolderItem.LaunchFileError = This file doesn't exist or has been deleted (Error %0%)
 
 IconPanel.PopupMenu.NewShortcut = New shortcut...
-IconPanel.PopupMenu.Delete = Delete...
+IconPanel.PopupMenu.Delete = Remove...
 IconPanel.PopupMenu.Properties = Properties
 IconPanel.PopupMenu.AddToQuickLaunch = Add to Multi Launch group
-IconPanel.DeleteConfirmation = Do you wish to delete this item?
+IconPanel.DeleteConfirmation = Do you wish to remove this icon?
 
 EditFolderItemForm.Title = Shorcut Properties
 EditFolderItemForm.NameLabel = Name:
@@ -72,10 +72,10 @@ ConfigDialog.VerticalOrientation = Vertical
 ConfigDialog.UpdateButton = Check for update
 ConfigDialog.UpdateButtonWait = Please wait...
 
-OptionPanel.CloseToolTip = Close
+OptionPanel.CloseToolTip = Minimize to tray
 OptionPanel.MinimizeToolTip = Minimize
 OptionPanel.ConfigToolTip = Config
-OptionPanel.EjectToolTip = Eject
+OptionPanel.EjectToolTip = Eject drive
 OptionPanel.AddShortcutToolTip = New shortcut
 OptionPanel.HelpToolTip = Help
 OptionPanel.KeyToolTip = Encrypt / Decrypt
