--- a/trunk/Data/Locales/de.txt
+++ b/trunk/Data/Locales/de.txt
@@ -15,12 +15,12 @@ MessageBox.Warning = Warnung
 MessageBox.Confirmation = Bestätigung
 
 HelpPopup.Help = Hilfethemen
-HelpPopup.About = über %0%...
+HelpPopup.About = Über %0%...
 
 FolderItem.LaunchFileError = Diese Datei existiert nicht oder wurde gelöscht (Fehler %0%)
 
 IconPanel.PopupMenu.NewShortcut = Neue Verknüpfung...
-IconPanel.PopupMenu.Delete = Löschen...
+IconPanel.PopupMenu.Delete = Verknüpfung löschen...
 IconPanel.PopupMenu.Properties = Eigenschaften
 IconPanel.PopupMenu.AddToQuickLaunch = Zur Schnellstart-Gruppe hinzufügen
 IconPanel.DeleteConfirmation = Wollen Sie diese Verknüpfung wirklich löschen?
@@ -47,18 +47,20 @@ AboutDialog.License = Lizenz
 
 ConfigDialog.Title = Einstellungen
 ConfigDialog.GeneralTab = Allgemein
+ConfigDialog.AppearanceTab = Aussehen
 ConfigDialog.LanguageLabel = Sprache:
 ConfigDialog.IconSizeLabel = Symbolgröße
+ConfigDialog.SkinLabel = Design
 ConfigDialog.Orientation = Ausrichtung
 ConfigDialog.HorizontalOrientation = Horizontal
 ConfigDialog.VerticalOrientation = Vertikal
-ConfigDialog.UpdateButton = nach Update suchen
+ConfigDialog.UpdateButton = Nach neuer Version suchen
 ConfigDialog.UpdateButtonWait = Bitte warten...
 
 OptionPanel.CloseToolTip = Schließen
 OptionPanel.MinimizeToolTip = Minimieren
 OptionPanel.ConfigToolTip = Einstellungen
-OptionPanel.EjectToolTip = Eject
+OptionPanel.EjectToolTip = Externes Laufwerk abmelden
 OptionPanel.AddShortcutToolTip = Neue Verknüpfung
 OptionPanel.HelpToolTip = Hilfe
 OptionPanel.KeyToolTip = Verschlüsseln / Entschlüsseln
@@ -68,8 +70,8 @@ Updater.NoNewVersion = Sie haben die aktuelle Version.
 Updater.NewVersion = Eine neue Version ist erhältlich!
  
  Ihre Version: %0%
- Neueste version: %1%
+ Neueste Version: %1%
  Was ist neu in: %2%
  
- Möchten Sie sie jetzt herunterladen
-Updater.Error = Keine Updateinformation erhältlich
+ Möchten Sie sie jetzt herunterladen?
+Updater.Error = Keine Information zu neuen Versionen erhältlich...
