--- a/branches/version_1.0/Data/Help/fr/appetizer_help.po
+++ b/branches/version_1.0/Data/Help/fr/appetizer_help.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Appetizer Help\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-10 22:13+0000\n"
+"POT-Creation-Date: 2008-11-12 19:14+0000\n"
 "PO-Revision-Date: 2008-11-09 22:57-0000\n"
 "Last-Translator: Laurent Cozic\n"
 "Language-Team: Appetizer Project\n"
@@ -26,13 +26,15 @@ msgid "About Appetizer"
 msgstr "À propos d'Appetizer"
 
 #: generate_help\main.cpp:112
+#, fuzzy
 msgid ""
 "Appetizer is a dock bar that allows you to organize, display and launch your "
 "applications and other shortcuts. Currently it is possible to add "
 "executables, documents and folders to the dock. Additionally, if you use "
 "Appetizer on a USB key in the [http://portableapps.com PortableApps] format, "
-"the application will detect it and automatically add all your applications "
-"along with the 'Documents', 'Videos', 'Music' and 'Pictures' folders."
+"the application will detect it and automatically import all your "
+"applications along with the 'Documents', 'Videos', 'Music' and 'Pictures' "
+"folders."
 msgstr ""
 "Appetizer est un utilitaire qui permet de gérer ses programmes et raccourcis "
 "depuis une barre d'icônes. Entre autre il est possible d'ajouter des "
